src/style.css
body {
  background: linear-gradient(
    89deg,
    rgb(21, 74, 189) 0.1%,
    rgb(26, 138, 211) 51.5%,
    rgb(72, 177, 234) 100.2%
  );
}
.container {
  background: rgb(255, 255, 255);
  border-radius: 10px;
  font-family: "Roboto", sans-serif;
  margin: 20px auto;
  max-width: 800px;
  padding: 15px 20px 5px 20px;
  text-align: center;
}

h1 {
  font-size: 40px;
  margin-bottom: 0;
  text-align: left;
}

h2 {
  font-size: 22px;
  line-height: 40px;
  margin-top: 5px;
  text-align: center;
}

ul {
  float: left;
  line-height: 0.7;
  list-style-type: none;
  margin: 0px;
  padding: 0px;
}
.current-weather {
  background-color: rgba(68, 174, 232, 0.35);
  border-radius: 10px;
  margin: 7px 0;
  padding: 7px 10px;
}
.current-weather-summary {
  font-size: 16px;
  margin-top: 0;
  text-align: left;
}
#current-weather-description {
  text-transform: capitalize;
}
#current-weather-icon {
  height: 100%;
  margin: 0px;
  padding-bottom: 30px;
}
.current-temp-number {
  font-size: 65px;
}
.degree-selector {
  font-size: 30px;
  vertical-align: 22px;
}

.degree-selector .active {
  color: rgb(33, 33, 33);
}

a {
  text-decoration: none;
}
.current-weather-details {
  font-size: 16px;
  margin: 10px;
  padding: 0px 30px;
}
.fa-cloud-rain {
  color: rgb(21, 74, 189);
}
.fa-cloud-sun {
  color: rgb(231, 188, 31);
}
.five-days-weather {
  background-color: rgba(68, 174, 232, 0.35);
  border-radius: 10px;
  margin-top: 10px;
  padding: 7px 10px;
}
.forecast-grid {
  display: grid;
  width: 740px;
  grid-template-columns: repeat(5, 1fr);
  grid-gap: 30px;
  margin: 0 auto;
}
.grid-item {
  font-weight: 700;
  font-size: 22px;
}
.high-temp {
  font-weight: 500;
}
.low-temp {
  font-weight: normal;
}
.search-button {
  background-color: rgb(21, 74, 189);
  border-radius: 4px;
  border: 1px solid rgb(21, 74, 189);
  box-shadow: 2px 2px 2px rgb(0, 0, 0);
  color: rgb(255, 255, 255);
  padding: 5px 10px;
  margin: 0px 3px;
  font-size: 16px;
}
.search-field {
  box-shadow: 1px 1px 3px rgb(0, 0, 0);
  margin: 5px 0px;
  padding: 5px 10px;
  width: 530px;
}
.current-location {
  background-color: rgba(0, 0, 0, 0.8);
  border-radius: 4px;
  border: 1px solid rgb(0, 0, 0);
  box-shadow: 2px 2px 2px rgb(0, 0, 0);
  color: rgb(255, 255, 255);
  padding: 5px 10px;
  font-size: 16px;
}

.coded-by {
  font-size: smaller;
  margin: 5px 10px 0px 5px;
}

